# paho.mqtt-sn.embedded-c

MQTTSNGateway/: CMakeLists.txt
